# gamelib3

./: CMakeLists.txt
src/: dll_export.hpp  platform.h  types.hpp
src/camera/: camera.cpp  camera.hpp
src/compass/: compass.cpp  compass.hpp
src/debug/: debug.cpp  debug.hpp  joystick.cpp  joystick.hpp
src/engine/: engine.cpp  engine.hpp  entity.cpp  entity.hpp  framerate.cpp  framerate.hpp
src/graphics/: autotexture.cpp  autotexture.hpp  primitives.cpp  primitives.hpp  renderable.cpp  renderable.h  renderable.hpp  sprite.cpp  sprite.hpp  spriteanimation.cpp  spriteanimation.hpp  tiled_background.cpp  tiled_background.hpp
src/input/: controller.cpp  controller.hpp  gamepad.cpp  gamepad.hpp  input.hpp
src/math/: vector.cpp  vector.hpp
src/physics/: collisions.cpp  collisions.hpp  integration.cpp  integration.hpp  metrics.hpp  movable.cpp  movable.hpp
src/utils/: file.cpp  file.hpp  files.cpp  files.hpp  grid.cpp  grid.hpp  timer.cpp  timer.hpp
